cleaned up most of the files for exam, added more comments for readability
